--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         <a href="" class="pet-project-goit-list__link">Basic JS</a>
       </li>
       <li class="pet-project-goit-list__item">
-        <a href="./partials/JS-6/js.html" class="pet-project-goit-list__link"
+        <a href="./partials/JS-6/js6.html" class="pet-project-goit-list__link"
           >JS-6</a
         >
       </li>
